--- a/.github/workflows/run_download.yml
+++ b/.github/workflows/run_download.yml
@@ -31,4 +31,11 @@ jobs:
           echo 'export PATH=$PATH:/usr/local/bin/' >> $GITHUB_ENV
 
       - name: Run script
-        run: python download_excel.py
+        run: |
+          set -o pipefail
+          python download_excel.py 2>&1 | tee error_log.txt
+        continue-on-error: true
+
+      - name: Print error log
+        if: failure()
+        run: cat error_log.txt
