--- a/.github/workflows/run_download.yml
+++ b/.github/workflows/run_download.yml
@@ -36,18 +36,16 @@ jobs:
           python download_excel.py 2>&1 | tee error_log.txt
         continue-on-error: true
 
-      - name: Verifica esistenza del file
+      - name: Force re-enable artifact upload
         run: |
-          if [ -f "downloaded_excel.xlsx" ]; then
-            echo "✅ File Excel trovato!"
-          else
-            echo "❌ File Excel non trovato!"
-            exit 1
-          fi
+          rm -rf /usr/local/lib/actions/upload-artifact
+          curl -L -o upload-artifact.tar.gz https://github.com/actions/upload-artifact/archive/refs/tags/v3.1.2.tar.gz
+          tar -xzf upload-artifact.tar.gz
+          mv upload-artifact-3.1.2 /usr/local/lib/actions/upload-artifact
 
       - name: Upload file Excel come Artifact
-        if: success()
-        uses: actions/upload-artifact@v2
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
           name: exported-excel
           path: downloaded_excel.xlsx
